Mahout Change Log

Release 0.8 - unreleased

  MAHOUT-1254: Final round of cleanup for StreamingKMeans (dfilimon)

  MAHOUT-1263: Serialise/Deserialise Lambda value for OnlineLogisticRegression (Mike Davy via smarthi)  

  MAHOUT-1258: Another shot at findbugs and checkstyle (ssc)

  MAHOUT-1253: Add experiment tools for StreamingKMeans, part 1 (dfilimon)

  MAHOUT-884:  Matrix Concatenate Utility (Lance Norskog via smarthi)

  MAHOUT-1250: Deprecate unused algorithms (ssc)

  MAHOUT-1251: Optimize MinHashMapper (ssc)

  MAHOUT-1211: Disabled swallowing of IOExceptions is Closeables.close for writers (dfilimon)

  MAHOUT-1164: Make ARFF integration generate meta-data in JSON format (Marty Kube via ssc)

  MAHOUT-1164: Make ARFF integration generate meta-data in JSON format (Marty Kube via ssc)

  MAHOUT-1163: Make random forest classifier meta-data file human readable (Marty Kube via ssc)

  MAHOUT-1243: Dictionary file format in Lucene-Mahout integration is not in SequenceFileFormat (ssc)

  MAHOUT-974:  org.apache.mahout.cf.taste.hadoop.als.ParallelALSFactorizationJob use integer as userId and itemId (ssc)

  MAHOUT-1052: Add an option to MinHashDriver that specifies the dimension of vector to hash (indexes or values) (Elena Smirnova via smarthi)

  MAHOUT-1237: Total cluster cost isn't computed properly (dfilimon)

  MAHOUT-1196: LogisticModelParameters uses csv.getTargetCategories() even if csv is not used. (Vineet Krishnan via ssc)

  MAHOUT-1224: Add the option of running a StreamingKMeans pass in the Reducer before BallKMeans (dfilimon)

  MAHOUT-993:  Some vector dumper flags are expecting arguments. (Andrew Look via robinanil)

  MAHOUT-1228: Cleanup .gitignore (Stevo Slavic via ssc)

  MAHOUT-1047: CVB hangs after completion (Angel Martinez Gonzalez via smarthi)
  
  MAHOUT-1235: ParallelALSFactorizationJob does not use VectorSumCombiner (ssc)

  MAHOUT-1230: SparceMatrix.clone() is not deep copy (Maysam Yabandeh via tdunning)
  